--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,14 +1,15 @@
 ---
-import ThemeIcon from './ThemeIcon.astro';
+import ThemeIcon from "./ThemeIcon.astro";
 ---
+
 <div class="nav-bar">
-    <div class="title-link">
-        <a href="/">Milky-Way</a>
-    </div>
-    <div class="nav-links">
-        <a href="/works/">Works</a>
-        <a href="/posts/">Posts</a>
-        <a href="https://github.com/ttomczak3/Milky-Way" target="_blank">GitHub</a>
-        <ThemeIcon />
-    </div>
+  <div class="title-link">
+    <a href="/">Do Tran</a>
+  </div>
+  <div class="nav-links">
+    <a href="/works/">Works</a>
+    <a href="/posts/">Posts</a>
+    <a href="https://github.com/oldtune">GitHub</a>
+    <ThemeIcon />
+  </div>
 </div>
