add email contact

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ const pageTitle = "Milky-Way";
   <small>Digital Craftsman (Developer)</small>
   <h2>About</h2>
   <p>
-    I live in Ho Chi Minh city but it doesn't really matter where i am. We have the
-    internet, don't we?
+    I live in Ho Chi Minh city but it doesn't really matter where i am. We have
+    the internet, don't we?
   </p>
   <p>
     If you like my work and want to contact, please consider dropping me an
@@ -94,8 +94,12 @@ const pageTitle = "Milky-Way";
   </div>
   <h2>Interests</h2>
   <p>
-    I have endless love with everything for example motorcycling, jogging and working out... I also love drinking coffee in the morning. There are many good coffee shop in Ho Chi Minh City.
+    I have endless love with everything for example motorcycling, jogging and
+    working out... I also love drinking coffee in the morning. There are many
+    good coffee shop in Ho Chi Minh City.
   </p>
+  <h2>Contact</h2>
+  <p>Email me at: suddorun@gmail.com</p>
 </Layout>
 <style>
   /* small */
