--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-const pageTitle = "Milky-Way";
+const pageTitle = "Do Tran";
 ---
 
 <Layout pageTitle={pageTitle}>
