add deno adapter

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,6 +10,7 @@ import ThemeIcon from "./ThemeIcon.astro";
     <a href="/works/">Works</a>
     <a href="/posts/">Posts</a>
     <a href="https://github.com/oldtune">GitHub</a>
+    <a href="/tools/">Tools</a>
     <ThemeIcon />
   </div>
 </div>
