add medium post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,8 @@ const pageTitle = "Do Tran";
   <h1>Do Tran</h1>
   <small>Digital Craftsman (Developer)</small>
   <h2>About</h2>
-  <p>
-    I live in Ho Chi Minh city but it doesn't really matter where i am. We have
-    the internet, don't we?
-  </p>
-  <p>
-    If you like my work and want to contact, please consider dropping me an
-    email!
-  </p>
+  <p>What a time to be alive :)</p>
+  <p>YOLO!</p>
   <div class="button">
     <a href="/works/">
       <button>My portfolio</button>
@@ -94,9 +88,9 @@ const pageTitle = "Do Tran";
   </div>
   <h2>Interests</h2>
   <p>
-    I have endless love with everything for example motorcycling, jogging and
-    working out... I also love drinking coffee in the morning. There are many
-    good coffee shop in Ho Chi Minh City.
+    I have endless love with computer and outdoor activities. For example
+    motorcycling, jogging and working out... I also love drinking coffee in the
+    morning. There are many good coffee shop in Ho Chi Minh City.
   </p>
   <h2>Contact</h2>
   <p>Email me at: suddorun@gmail.com</p>
