--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -1,40 +1,27 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Card from "../components/Card.astro";
+import Layout from "../layouts/Layout.astro";
 const pageTitle = "Posts";
+
+const postsFetchResponse = await fetch(
+  `${import.meta.env.API_ENDPOINT}api/mediumpost`
+);
+const posts = await postsFetchResponse.json();
 ---
+
 <Layout pageTitle={pageTitle}>
-    <div class="gif">
-        <img width="300" height="259" alt="RaccoonLaptopGif" src="/blog.webp"/>
-    </div>
-    <h2>Blog</h2>
-    <ul role="list" class="link-card-grid">
-        <Card
-            href="https://medium.com/"
-            image="/blog.png"
-            title="Blog 1"
-            body="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci"
-        />
-        <Card
-            href="https://medium.com/"
-            image="/blog.png"
-            title="Blog 2"
-            body="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci"
-        />
-        <Card
-            href="https://medium.com/"
-            image="/blog.png"
-            title="Blog 3"
-            body="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci"
-        />
-        <Card
-            href="https://medium.com/"
-            image="/blog.png"
-            title="Blog 4"
-            body="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci"
-        />
-    </ul>
-    <h2>YouTube</h2>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonLaptopGif" src="/blog.webp" />
+  </div>
+  <h2>Blog</h2>
+  <ul role="list" class="link-card-grid">
+    {
+      posts.map((item) => (
+        <Card href={item.uri} image="/blog.png" title={item.title} body="" />
+      ))
+    }
+  </ul>
+  <!-- <h2>YouTube</h2>
     <ul role="list" class="link-card-grid">
         <Card
             href="https://www.youtube.com/"
@@ -48,5 +35,5 @@ const pageTitle = "Posts";
             title="Video 2"
             body="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci"
         />
-    </ul>
+    </ul> -->
 </Layout>
