--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 const pageTitle = "Posts";
 
 const postsFetchResponse = await fetch(
-  `${import.meta.env.API_ENDPOINT}api/mediumpost`
+  `${Deno.env.get("API_ENDPOINT")}api/mediumpost`
 );
 const posts = await postsFetchResponse.json();
 ---
