--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,11 +86,20 @@ const pageTitle = "Do Tran";
       src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-plain.svg"
     />
   </div>
+  <h2>Certifications</h2>
+  <p>
+    <img
+      width="106"
+      height="106"
+      src="/microsoft-certified-fundamentals-badge.svg"
+    />
+  </p>
   <h2>Interests</h2>
   <p>
     I have endless love with computer and outdoor activities. For example
-    motorcycling, jogging and working out... I also love drinking coffee in the
-    morning. There are many good coffee shop in Ho Chi Minh City.
+    motorcycling, adventure, jogging and working out... I also love drinking
+    coffee in the morning. There are many good coffee shop in Ho Chi Minh City
+    that you should try.
   </p>
   <h2>Contact</h2>
   <p>Email me at: suddorun@gmail.com</p>
