start updating this to become shibui homepage

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,13 +4,13 @@ import ThemeIcon from "./ThemeIcon.astro";
 
 <div class="nav-bar">
   <div class="title-link">
-    <a href="/">Do Tran</a>
+    <a href="/">Shibuicat</a>
   </div>
   <div class="nav-links">
     <a href="/works/">Works</a>
     <a href="/posts/">Posts</a>
     <a href="https://github.com/oldtune">GitHub</a>
-    <a href="/story">My story</a>
+    <a href="/about">Author</a>
     <ThemeIcon />
   </div>
 </div>
