--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,23 +1,24 @@
 ---
 const year = new Date().getFullYear();
 ---
+
 <footer>
-    <div>
-        <small>&copy; {year} Milky-Way by <a href="https://github.com/ttomczak3">ttomczak</a>. All Rights Reserved.</small>
-    </div>
+  <div>
+    <small>&copy; {year} Shibuicat Universe. All Rights Reserved.</small>
+  </div>
 </footer>
 <style>
-    div {
-        margin: 4rem 0;
-        text-align: center;
-    }
+  div {
+    margin: 4rem 0;
+    text-align: center;
+  }
 
-    small {
-        font-family: 'Josefin Sans', sans-serif; 
-    }
+  small {
+    font-family: "Josefin Sans", sans-serif;
+  }
 
-    small a {
-        color: #375a7f;
-        text-decoration: none;
-    }
+  small a {
+    color: #375a7f;
+    text-decoration: none;
+  }
 </style>
