--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -17,11 +17,12 @@
         rotate: 10deg;
     }
 
-    .moon { fill: #fdebf3; }
-    .sun { fill: transparent; }
+    .moon { fill:transparent; }
+    .sun { fill:  #1e1e2e; }
 
-    :global(.light) .moon { fill: transparent; }
-    :global(.light) .sun { fill: #1e1e2e; }
+    :global(.dark) .moon { fill: #fdebf3; }
+    :global(.dark) .sun { fill: transparent; }
+
 </style>
 <script is:inline >
     const theme = (() => {
@@ -34,20 +35,20 @@
         return 'dark';
     })();
 
-    if (theme === 'dark') {
-        document.documentElement.classList.remove('light');
+    if (theme === 'light') {
+        document.documentElement.classList.remove('dark');
     } else {
-        document.documentElement.classList.add('light');
+        document.documentElement.classList.add('dark');
     }
 
     window.localStorage.setItem('theme', theme);
 
     const handleToggleClick = () => {
         const element = document.documentElement;
-        element.classList.toggle("light");
+        element.classList.toggle("dark");
 
-        const isLight = element.classList.contains("light");
-        localStorage.setItem("theme", isLight ? "light" : "dark");
+        const isDark = element.classList.contains("dark");
+        localStorage.setItem("theme", isDark ? "dark" : "light");
     }
 
     document.getElementById("themeToggle").addEventListener("click", handleToggleClick);
