fix theme, half way resume

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,11 +2,11 @@
 import ThemeIcon from "./ThemeIcon.astro";
 ---
 
-<div class="nav-bar">
-  <div class="title-link">
+<div class="navbar">
+  <div class="navbar__title">
     <a href="/">Shibuicat</a>
   </div>
-  <div class="nav-links">
+  <div class="navbar__menu">
     <a href="/works/">Works</a>
     <a href="/posts/">Posts</a>
     <a href="https://github.com/oldtune">GitHub</a>
