--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import Company from "../components/resume/Company.astro";
 import Header from "../components/resume/Header.astro";
 import PersonalInfo from "../components/resume/PersonalInfo.astro";
@@ -11,7 +12,7 @@ const summarize = ResumeSummary;
 ---
 
 <Layout pageTitle={summarize.name}>
-  <main class="basis-full bg-white dark:bg-zinc-400">
+  <div class="basis-full">
     <div class="resume-container">
       <Header
         name={summarize.name}
@@ -19,20 +20,20 @@ const summarize = ResumeSummary;
         title={summarize.title}
         profilePicture={summarize.profilePicture}
       />
-      <div class="grid grid-cols-1 gap-4 md:grid-cols-4">
+      <div class="grid grid-cols-1 gap-4 md:grid-cols-6">
         <div
-          class="flex flex-col col-span-1 bg-zinc-800 p-2 items-center md:items-start"
+          class="flex flex-col flex-wrap col-span-1 md:col-span-2 p-2 items-center md:items-start"
         >
-          <div class="text-2xl font-bold mb-3">
-            <span class="bg-teal-900">Personal Info</span>
+          <div class="text-2xl font-bold mb-3 w-full text-center">
+            <span>Personal Info</span>
           </div>
           <PersonalInfo {...summarize.contact as any} />
         </div>
 
-        <div class="flex flex-col col-span-1 md:col-span-3 bg-zinc-800 p-2">
+        <div class="flex flex-col col-span-1 md:col-span-4 p-2">
           <div class="skills-section mb-3">
             <div class="text-2xl font-bold mb-3">
-              <span class="bg-teal-900">Skills</span>
+              <span>Skills</span>
             </div>
             <div>
               {
@@ -44,7 +45,7 @@ const summarize = ResumeSummary;
           </div>
           <div class="work-history-section mb-3">
             <div class="text-2xl font-bold my-2">
-              <span class="bg-teal-900">Work History</span>
+              <span>Work History</span>
             </div>
             <div class="work-histories">
               {
@@ -56,7 +57,7 @@ const summarize = ResumeSummary;
           </div>
           <div class="side-project">
             <div class="text-2xl my-2">
-              <span class="bg-teal-900">Side Projects</span>
+              <span>Side Projects</span>
             </div>
             <div>
               {
@@ -73,6 +74,5 @@ const summarize = ResumeSummary;
         </div>
       </div>
     </div>
-  </main>
+  </div>
 </Layout>
-
