--- a/src/pages/resume.css
+++ b/src/pages/resume.css
@@ -1,4 +1,4 @@
-.text-gradient {
+/* .text-gradient {
   background-image: var(--accent-gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -8,12 +8,10 @@
 
 .translate-z-1:hover {
   transform: translateX(-1rem) translateY(-1rem);
-  /* transition: transform 3s linear; */
   background: rgb(19 78 74 / var(--tw-bg-opacity));
   transition: background .8s linear;
 }
 
 .translate-z-1 {
-  /* transition: transform 3s linear; */
   transition: background .8s linear;
-}
+} */
