wip refining the resume

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,9 +8,9 @@ import ThemeIcon from "./ThemeIcon.astro";
   </div>
   <div class="navbar__menu">
     <a href="/works/">Works</a>
-    <a href="/posts/">Posts</a>
-    <a href="https://github.com/oldtune">GitHub</a>
-    <a href="/athor">Author</a>
+    <!-- <a href="/posts/">Posts</a> -->
+    <!-- <a href="https://github.com/oldtune">GitHub</a> -->
+    <a href="/about">About</a>
     <ThemeIcon />
   </div>
 </div>
