--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,67 +1,80 @@
 ---
 interface Props {
-    href: string;
-    image: string;
-    title: string;
-    body: string;
+  href: string;
+  image: string;
+  title: string;
+  body: string;
 }
 
 const { href, image, title, body } = Astro.props;
 ---
+
 <li class="link-card">
-    <a href={href}>
-        <div class="img">
-            <img width="226" height="127" src={image} class="card-img" alt="ProjectImage">
-        </div>
-	<h3 class="card-title">
-	    {title}
-	</h3>
-	<p class="card-txt">
-	    {body}
-        </p>
-    </a>
+  <a href={href} target="_blank">
+    <div class="img flex justify-center card-image-container">
+      <img src={image} class="card-img" alt="ProjectImage" />
+    </div>
+    <h3 class="card-title">
+      {title}
+    </h3>
+    <p class="card-txt">
+      {body}
+    </p>
+  </a>
 </li>
 <style>
-    .link-card {
-        list-style: none;
-        display: flex;
-        background-size: 400%;
-        padding: 20px;
-    }
+  .link-card {
+    list-style: none;
+    display: flex;
+    background-size: 400%;
+    padding: 20px;
+  }
 
-    .link-card > a {
-        width: 100%;
-        text-decoration: none;
-        line-height: 1.4;
-        border-radius: 8px;
-        color: #fdebf3;
-    }
+  .link-card > a {
+    width: 100%;
+    text-decoration: none;
+    line-height: 1.4;
+    border-radius: 8px;
+    /* color: #fdebf3; */
+  }
 
-    .img {
-        text-align: center;
-    }
+  .img {
+    text-align: center;
+  }
 
-    img {
-        border-radius: 16px;
-    }
+  img {
+    border-radius: 16px;
+  }
 
-    h3 {
-        margin: 0;
-        font-family: 'Josefin Sans', sans-serif;
-        font-size: 1.5rem;
-        font-weight: normal;
-        text-align: center;
-    }
+  h3 {
+    margin: 0;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-align: center;
+  }
 
-    p {
-        font-size: 1em;
-        line-height: 1.5;
-        text-indent: 0;
-        text-align: center;
-        margin: 0.5rem 0 0;
-    }
+  p {
+    font-size: 1em;
+    line-height: 1.5;
+    text-indent: 0;
+    text-align: center;
+    margin: 0.5rem 0 0;
+  }
 
-    .link-card:hover {
-        transform: scale(1.05);
-    }
+  .link-card:hover {
+    transform: scale(1.05);
+  }
+
+  img {
+    max-height: 200px;
+    max-width: 200px;
+    height: auto;
+    width: auto;
+    border-radius: 15px;
+  }
+
+  .card-image-container {
+    height: 200px;
+  }
 </style>
