--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -11,7 +11,7 @@ import "./resume.css";
 const summarize = ResumeSummary;
 ---
 
-<Layout pageTitle={summarize.name}>
+<Layout pageTitle="Resume">
   <div class="basis-full">
     <div class="resume-container">
       <Header
@@ -22,7 +22,7 @@ const summarize = ResumeSummary;
       />
       <div class="grid grid-cols-1 gap-4 md:grid-cols-6">
         <div
-          class="flex flex-col flex-wrap col-span-1 md:col-span-2 p-2 items-center md:items-start"
+          class="flex flex-col flex-wrap col-span-1 md:col-span-2 p-2 items-center md:items-start bg-zinc-800"
         >
           <div class="text-2xl font-bold mb-3 w-full text-center">
             <span>Personal Info</span>
@@ -30,7 +30,7 @@ const summarize = ResumeSummary;
           <PersonalInfo {...summarize.contact as any} />
         </div>
 
-        <div class="flex flex-col col-span-1 md:col-span-4 p-2">
+        <div class="flex flex-col col-span-1 md:col-span-4 p-2 bg-zinc-800">
           <div class="skills-section mb-3">
             <div class="text-2xl font-bold mb-3">
               <span>Skills</span>
