have a working resume

--- a/src/components/resume/Header.astro
+++ b/src/components/resume/Header.astro
@@ -30,7 +30,7 @@ const yoeText = function () {
 ---
 
 <div
-  class="grid border grid-cols-1 gap-4 md:grid-cols-4 mb-4 bg-zinc-800 cv-header py-2"
+  class="grid border grid-cols-1 gap-4 md:grid-cols-4 mb-4 dark:bg-zinc-800 cv-header py-2 bg-gray-300"
 >
   <div class="flex col-span-1 profile-picture-container">
     <img
