ready to deploy

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ const pageTitle = "About";
     </p>
   </div>
 
-  <div class="button">
+  <div class="button mt-2">
     <a href="/works/">
       <button>My portfolio</button>
     </a>
@@ -30,9 +30,9 @@ const pageTitle = "About";
       <button>My Resume</button>
     </a>
   </div>
-  <h2>Interests</h2>
+  <h2 class="mt-2">Interests</h2>
   <p>I like computer, photography, BJJ, outdoor activities and coffee.</p>
-  <h2>Contact</h2>
+  <h2 class="mt-2">Contact</h2>
   <p>
     Email me at: <a class="email" href="mailto:tvddaman@gmail.com"
       >tvddaman@gmail.com</a
