--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -15,7 +15,7 @@ const pageTitle = "Works";
     there is so much more than just working someone else, so I started sharing
     stuff in early 2025, here they are.
   </p>
-  <ul role="list" class="link-card-grid">
+  <ul role="list" class="link-card-grid my-2">
     <Card
       href="https://github.com/shibuicat"
       image="/Doguri_Pebbles_1.gif"
@@ -34,7 +34,7 @@ const pageTitle = "Works";
     I picked up this hobby in early 2025 around the same i changed my mindset
     and wanted to build something of my own to share with the world.
   </p>
-  <ul role="list" class="link-card-grid">
+  <ul role="list" class="link-card-grid my-2">
     <Card
       href="https://github.com/"
       image="/photography.webp"
