--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -9,7 +9,9 @@ interface Props {
 const { href, image, title, body } = Astro.props;
 ---
 
-<li class="link-card">
+<li
+  class="link-card hover:transition-all hover:border hover:border-r-5 hover:border-b-5 hover:border-solid rounded-2xl"
+>
   <a href={href} target="_blank">
     <div class="img flex justify-center card-image-container">
       <img src={image} class="card-img" alt="ProjectImage" />
