--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,6 +27,11 @@ html {
 body {
   margin: 0 auto;
   text-align: justify;
+
+  font-family: var(--body);
+  font-size: 1.1rem;
+  hyphens: auto;
+  line-height: 1.5;
 }
 
 h1,
